refactor(backend): use Stream.toList() in Controllers
- FormulaireController
- UserController